--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>pjwst.jaz.zadanie1</groupId>
   <artifactId>webapp_zad1</artifactId>
@@ -15,20 +15,21 @@
       <scope>test</scope>
     </dependency>
 
-   <dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>servlet-api</artifactId>
-    <version>2.5</version>
-    <scope>provided</scope>
-  </dependency>
 
-  <dependency>
-    <groupId>javax</groupId>
-    <artifactId>javaee-api</artifactId>
-    <version>7.0</version>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>
 
-    <scope>provided</scope>
-  </dependency>
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
+
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>com.darwinsys</groupId>
       <artifactId>darwinsys-api</artifactId>
@@ -49,18 +50,29 @@
 
     <dependency>
 
-    <groupId>jstl</groupId>
+      <groupId>jstl</groupId>
 
-    <artifactId>jstl</artifactId>
+      <artifactId>jstl</artifactId>
 
-    <version>1.2</version>
+      <version>1.2</version>
 
-  </dependency>
+    </dependency>
 
   </dependencies>
   <build>
     <finalName>webapp_zad1</finalName>
     <plugins>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.4.8.v20171121</version>
+        <configuration>
+          <scanIntervalSeconds>5</scanIntervalSeconds>
+          <webApp>
+            <contextPath>/webapp_zad1/</contextPath>
+          </webApp>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -69,6 +81,7 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+
     </plugins>
   </build>
 </project>
