--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,25 @@
   <name>webapp_zad1 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
 
+
+
+
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.10.0</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -30,11 +42,7 @@
 
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>com.darwinsys</groupId>
-      <artifactId>darwinsys-api</artifactId>
-      <version>1.0.3</version>
-    </dependency>
+
 
     <dependency>
       <groupId>taglibs</groupId>
@@ -56,6 +64,11 @@
 
       <version>1.2</version>
 
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>RELEASE</version>
     </dependency>
 
   </dependencies>
