--- a/pom.xml
+++ b/pom.xml
@@ -19,27 +19,14 @@
     </dependency>
 
 
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <version>2.0.0-beta.5</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito2</artifactId>
-      <version>2.0.0-beta.5</version>
-      <scope>test</scope>
-    </dependency>
-
-
 
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>2.4.0</version>
-
+      <scope>test</scope>
     </dependency>
+
 
     <dependency>
       <groupId>javax.servlet.jsp.jstl</groupId>
@@ -75,6 +62,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.0</version>
+      <scope>compile</scope>
     </dependency>
 
 
